<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.dovaleac</groupId>
    <artifactId>stateless4j-yaml-importer</artifactId>
    <packaging>maven-plugin</packaging>
    <version>1.3.0-SNAPSHOT</version>
    <url>http://maven.apache.org</url>

    <properties>
        <java.version>9</java.version>
        <maven.compiler.target>9</maven.compiler.target>
        <maven.compiler.source>9</maven.compiler.source>
    </properties>

    <name>Stateless4j YAML importer</name>

    <description>This project reads a YAML file and generates code compatible with the
        stateless4j library available at https://github.com/oxo42/stateless4j. The yaml
        represents a state machine; if you have more than one, simply add several
        state machines and call this plugin several times.
    </description>

    <developers>
        <developer>
            <id>dovaleac</id>
            <name>Pablo González Doval</name>
            <email>dovaleac@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <scm>
        <developerConnection>
            https://github.com/dovaleac/stateless4j-yaml-importer.git
        </developerConnection>
        <url>https://github.com/dovaleac/stateless4j-yaml-importer.git</url>
        <connection>git://github.com/dovaleac/stateless4j-yaml-importer.git</connection>
    </scm>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>[2.9.9,)</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>[2.9.9,)</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.6.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.6.0</version>
                <!--<version>3.2</version>-->
                <configuration>
                    <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                </configuration>
                <executions>
                    <execution>
                        <id>mojo-descriptor</id>
                        <goals>
                            <goal>descriptor</goal>
                        </goals>
                    </execution>

                    <!-- if you want to generate help goal -->
                    <execution>
                        <id>help-goal</id>
                        <goals>
                            <goal>helpmojo</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
                <!--<version>3.0.0</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>verify-style</id>-->
                        <!--<phase>process-classes</phase>-->
                        <!--<goals>-->
                            <!--<goal>check</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
                <!--<configuration>-->
                    <!--<configLocation>google_checks.xml</configLocation>-->
                    <!--<encoding>UTF-8</encoding>-->
                    <!--<consoleOutput>true</consoleOutput>-->
                    <!--<failsOnError>false</failsOnError>-->
                    <!--<failOnViolation>true</failOnViolation>-->
                    <!--<violationSeverity>warning</violationSeverity>-->
                    <!--<linkXRef>false</linkXRef>-->
                    <!--<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>-->
                    <!--<suppressionsFileExpression>checkstyle.suppressions.file-->
                    <!--</suppressionsFileExpression>-->
                <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>upload</id>

            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
                </repository>
            </distributionManagement>

            <build>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.7</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
